--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-body {
+body, #root {
   width: 100%;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 0;
 }
