feat: implement line drawing functionality with stored state

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,7 @@ body, #root {
   width: 100%;
   height: 100vh;
   margin: 0;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
