feat: implement basic drawing functionality and toolbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@ body, #root {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  font-family: 'Roboto', sans-serif;
 }
