feat: update readme

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ body, #root {
   width: 100%;
   height: 100vh;
   margin: 0;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+  -webkit-user-select: none;
+  -ms-user-select: none; 
+  user-select: none;
   font-family: 'Roboto', sans-serif;
 }
